--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
- 
+<head>
+ <link rel="stylesheet" href="index.css">
+</head>
 <body>
   <h1>I'm Bradley!</h1>
   <p>Welcome to my website!</p>
